# skillnote

./: .dockerignore  .gitignore  BACKEND_BLUEPRINT.md  CHANGELOG.md  CLAUDE.md  Dockerfile  HARDENING_SPEC.md  LICENSE  MIGRATION-v0.5.md  README.md  UI_BACKEND_INTEGRATION_PLAN.md  docker-compose.yml  install.sh  next.config.ts  package-lock.json  package.json  playwright.config.ts  start.sh  test-editor-ux.mjs  tsconfig.json  tsconfig.tsbuildinfo
backend/: Dockerfile  Dockerfile.mcp  Makefile  PHASE2_ACCESS_CONTROL_PLAN.md  README.md  alembic.ini  docker-compose.yml  mcp_server.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_skill_rich_fields.py  0003_content_versions.py  0004_drop_auth_tables.py  0005_drop_tags.py  0006_analytics_events.py  0007_skill_ratings.py  0008_settings_table.py  0009_extra_frontmatter.py  0010_pick_sessions.py  0011_collections_table.py  0012_slugify_collection_names.py  0013_import_sources.py  0014_subpath_not_null.py  0015_openclaw_foundation.py  0016_drop_skill_embedding.py  0017_agent_installs.py  0018_agent_disconnects.py
backend/app/: main.py
backend/app/api/: analytics.py  auth.py  cli.py  collections.py  comments.py  deps.py  downloads.py  hooks.py  imports.py  marketplace.py  openclaw.py  publish.py  sessions.py  settings.py  setup.py  skills.py  tags_api.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/scripts/: backfill_embeddings.py  seed_data.py  setup-template.sh  smoke_test.sh  wait_for_db.py
backend/tests/: conftest.py
cli/: README.md  (+6 more)
(+385 files in other folders)
