[project]
name = "skillnote-backend"
version = "0.1.0"
description = "Self-hosted skills registry backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.2.0",
  "alembic>=1.14.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "pytest>=8.3.0",
  "httpx>=0.28.0",
  "python-multipart>=0.0.20",
]

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
test = [
  "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
